# personal-data-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  dashboard.py  entrypoint.sh  fly.toml  main.py  pyproject.toml  test_config.py
.github/workflows/: deploy.yml  scheduled_run.yml
config/: logging.py  settings.py
ingestion/: google_drive_client.py  google_sheets_source.py  interfaces.py  mi_band_drive_source.py  pipeline.py  runner.py
personal_data_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pipeline/: FIX.code-search  artifacts.py  dag.py  dag_executor.py  gates.py  hash_utils.py  nodes.py  orchestrator.py  pipeline_state.py  registry_json.py  registry_sqlite.py  we.code-search
processing/aggregators/: merge_daily_metrics.py
processing/loaders/: bp_loader.py
processing/normalizers/: google_sheets_normalizer.py  mi_band_normalizer.py
processing/validators/: validate.py
scripts/: check_data_stages.py  cleanup.py  generate_mock_data.py  inspect_registry.py  mi_band_pipeline.py  sync_state.py  test_registry.py
tests/: test_dag.py  test_registry.py
